wordpress/sites/advocate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-advocate
  namespace: wordpress
  labels:
    ocf.berkeley.edu/wordpress: advocate
spec:
  replicas: 1
  selector:
    matchLabels:
      ocf.berkeley.edu/wordpress: advocate
  template:
    metadata:
      labels:
        ocf.berkeley.edu/wordpress: advocate
    spec:
      containers:
        - name: wordpress-core
          image: ghcr.io/ocf/ocf-wordpress-core:1q0cdi6la7s5zc06j27mk6zprmvcxvpi #TODO make latest (w/automation)
          volumeMounts:
          - mountPath: /tmp
            name: tmp
          - mountPath: /uploads
            name: uploads
            subPath: wp-advocate
          - mountPath: /content
            name: content
            subPath: wp-advocate
          ports:
          - containerPort: 443
      securityContext:
        fsGroup: 65534
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads
      - name: content
        persistentVolumeClaim:
          claimName: content
      - name: tmp
        emptyDir: 
          sizeLimit: 500Mi
