wordpress/sites/advocate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-advocate
  namespace: wordpress
spec:
  rules:
  - host: advocate.wp.ocfhosted.com
    http:
      paths:
      - backend:
          service:
            name: wp-advocate
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - advocate.wp.ocfhosted.com
    secretName: wp-advocate-tls
